--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
     body {
-      background-color: #ffe9f9;
+      background-color: #86b3b2;
       font-family: 'Press Start 2P', cursive;
       display: flex;
       justify-content: center;
@@ -19,12 +19,12 @@
 
     .clock {
       color: #fff;
-      background: #ff66b2;
+      background: #f4cddb;
       padding: 30px 40px;
-      border: 8px solid #ff1493;
+      border: 8px solid #b65a5a;
       border-radius: 10px;
       font-size: 24px;
-      box-shadow: 0 0 20px #ff69b4;
+      box-shadow: 0 0 20px #b65a5a;
       text-shadow: 1px 1px 2px #000;
     }
   </style>
