--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     .clock {
       color: #fff;
-      background: #f4cddb;
+      background: #d3caac;
       padding: 30px 40px;
       border: 8px solid #b65a5a;
       border-radius: 10px;
